frontend/src/components/Collapse.module.css
.Collapse {
  width: 100%;
}

.header {
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  background-color: #FF6060;
  color: white;
  padding: 20px;
  border-radius: 5px;
}

.header h3 {
  font-size: 24px;
  font-weight: 700;
}

.arrow {
    width: 32px;
    height: 32px;
    cursor: pointer;
    transition: transform 500ms ease-in-out;
}

.arrowOpen {
  transform: rotate(0deg);
}

.arrowClose {
  transform: rotate(180deg);
}

.content {
  background-color: #f6f6f6;
  padding: 20px;
  border-radius: 5px;
  font-size: 18px;
  font-weight: 400;
  line-height: 1.4;  
  overflow: hidden;
  transition: max-height 300ms ease-out, padding 300ms ease-out, opacity 200ms ease-in;
}

.contentOpen {
  max-height: 500px;
}

.contentOpen > * {
  opacity: 1;
}

.contentClose {
  max-height: 0;
  padding: 0 20px;
}

.contentClose > * {
  opacity: 0;
}

@media (max-width: 768px) {
  .header {
    padding: 8px 12px;
  }

  .header h3 {
    font-size: 13px;
  }

  .arrow {
    width: 16px;
    height: 16px;
  }

  .content {
    padding: 15px 12px;
    font-size: 12px;
  }
}

